--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\\\mssqllocaldb;Database=DbClientes;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=TIT0676515W11-1\\SQLEXPRESS;Database=DbClientes;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
